--- a/index.html
+++ b/index.html
@@ -1229,7 +1229,7 @@
                             <div class="timeline-date">17 мая</div>
                             <img src="photos/may-17.jpg" class="timeline-photo-thumb" onclick="openPhoto(this.src)"
                                 alt="Фото">
-                            <div class="timeline-caption">В этот день мы впервые сказали друг другу "я люблю тебя" ❤️
+                            <div class="timeline-caption">В этот день мы впервые сказали друг другу "я люблю тебя" 💘
                             </div>
                         </div>
 
@@ -1297,7 +1297,7 @@
                             <div class="timeline-date">9 сентября</div>
                             <img src="photos/sept-9.jpg" class="timeline-photo-thumb" onclick="openPhoto(this.src)"
                                 alt="Фото">
-                            <div class="timeline-caption">Наша долгожданная встреча после 2 месяцев расстояния 🥹❤️
+                            <div class="timeline-caption">Наша долгожданная встреча после 2 месяцев расстояния 🥹💞
                             </div>
                         </div>
 
