--- a/index.html
+++ b/index.html
@@ -1449,33 +1449,20 @@
 
         <!-- Screen 5: Final -->
         <div class="screen" id="screen5">
-            <div class="final-content">
-                <div class="cities-connection">
-                    <div class="city-marker">
-                        <span class="city-icon">🏰</span>
-                        <span class="city-name">Прага</span>
-                    </div>
-                    <div class="connection-line"></div>
-                    <div class="city-marker">
-                        <span class="city-icon">🎡</span>
-                        <span class="city-name">Лондон</span>
-                    </div>
-                </div>
+            <div class="final-content" style="text-align: center;">
+                <h1
+                    style="font-family: 'Caveat', cursive; font-size: 4rem; color: var(--gold-warm); margin-bottom: 20px; text-shadow: 0 0 20px rgba(255, 215, 0, 0.3);">
+                    2026</h1>
 
-                <p class="final-message">
-                    Пусть новый год принесёт тебе<br>
-                    классный вайб, вдохновение<br>
-                    и много поводов улыбаться ✨<br><br>
-                    Обнимаю из Праги и надеюсь,<br>
-                    что скоро увидимся вживую! 💕
+                <p class="final-message"
+                    style="font-size: 1.1rem; line-height: 1.6; margin-bottom: 30px; max-width: 340px; margin-left: auto; margin-right: auto;">
+                    Котенок, пусть этот год станет еще лучше и принесет тебе много радости и счастья! Я очень очень
+                    сильно скучаю по тебе и просто безумно тебя люблю💞 Я сделаю все чтобы ты улыбалась каждый день в
+                    этом году и буду всегда поддерживать тебя чтобы ты добивалась всех своих целей! Очень хочу встретить
+                    следующий новый год рядом с тобой! Целую и обнимаю тебя и с нетерпением жду нашей встречи🫂
                 </p>
 
-                <p class="signature">С любовью от Насти 💖</p>
-                <p class="final-year">2026</p>
-
-                <button class="btn-secondary" style="margin-top: 30px;" onclick="restartQuest()">
-                    Пройти ещё раз ✨
-                </button>
+                <button class="btn-magic" onclick="goToMemories()">Вернуться к воспоминаниям 💫</button>
             </div>
         </div>
 
